Fixes #5476: Adjusted z-index for tooltips to avoid overlapping with bars (#6656)

--- a/src/renderer/components/ft-tooltip/ft-tooltip.css
+++ b/src/renderer/components/ft-tooltip/ft-tooltip.css
@@ -25,7 +25,7 @@
   transition-duration: 275ms;
   transition-property: opacity, transform, visibility;
   visibility: hidden;
-  z-index: 4;
+  z-index: 2;
 }
 
 .text.bottom {
